# zk_election

./: .gitignore  Cargo.toml  abc.toml  cf_signed.p7m  var.env
app/: Cargo.toml
apps/: Cargo.toml
apps/src/: bakup.txt  parser.rs
contracts/: CFWallet.sol  CfWallet.sol  ImageID.sol  RiscZeroElection.sol
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
