[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { version = "0.4", features = ["full"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
url = { version = "2.5" }

#parser
bcder = "0.7.4"
pem = "2"
hex = "0.4.3"
chrono = "0.4.38"