[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
risc0-zkp = { version = "1.1.1", default-features = false }




[build-dependencies]
risc0-build = { version = "1.1", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.1" }

[dev-dependencies]
alloy-primitives = { version = "0.8.8", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8.8" }
risc0-zkvm = { version = "1.1.1", default-features = false, features = ["client"] }
