[package]
name = "guests"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "zk-verifier"
#path = "src/bin/zk_verifier.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.8.6" }
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }

#crypto

rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = { version = "0.10.8" }
hex = { version = "0.4.3" }
crypto-bigint = { version = "0.5.5" }

k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
], default-features = false }

[profile.release]
lto = "thin"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
